# benchmarks

./: .gitignore  NOTES.md  README.md  TUNING.md  benchmark.js  compose.yml  config-nopool.yaml  config.with-pool.yaml  config.yaml  pgcat.toml  run.sh
express/: Dockerfile  package.json
express/node-postgres/: server.js
express/porsager/: server.js
fastapi/: Dockerfile  requirements.txt
fastapi/asyncpg/: main.py
fastapi/psycopg/: main.py
go/: Dockerfile  go.mod  go.sum
go/pgx/: Dockerfile  main.go
go/pgx-opt/: main.go
go/pq/: Dockerfile  main.go
go/pq-opt/: main.go
hono/: Dockerfile  package.json  server.ts
next/: Dockerfile  package.json
next/app/api/tx/: route.js
next/server/: db.js
rust/: Cargo.toml  Dockerfile  config.yaml
rust/src/actix/: main.rs
rust/src/axum/: main.rs
rust/src/hyper/: main.rs
spring/: Dockerfile  build.gradle
spring/src/main/java/dev/bench/: Application.java
spring/src/main/java/dev/bench/config/: YamlConfig.java
spring/src/main/java/dev/bench/web/: TxController.java
spring/src/main/resources/: application.yml
sql/: functions.sql  pgbench.sh
