[package]
name = "rust-bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "axum"
path = "src/axum/main.rs"

[[bin]]
name = "actix"
path = "src/actix/main.rs"

[[bin]]
name = "hyper"
path = "src/hyper/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full", "rt-multi-thread"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
futures-util = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
axum = { version = "0.7", features = ["macros"], optional = true }
actix-web = { version = "4", optional = true }
num_cpus = "1.16"
hyper = { version = "1.8.1", features = ["server", "http1", "http2"], optional = true }
tokio-postgres = { version = "0.7.15", optional = true }
deadpool = { version = "0.12.3", optional = true }
deadpool-postgres = { version = "0.14.1", optional = true }

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { version = "0.1.43", default-features = false, features = ["override", "secure"] }

[features]
default = ["axum"]
axum   = ["dep:axum"]
actix  = ["dep:actix-web"]
hyper  = [
    "dep:hyper",
    "dep:tokio-postgres",
    "dep:deadpool",
    "dep:deadpool-postgres"
]
